smol fix to class name :baby:

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </p>
             </div>
         </div>
-        <div class="feature">
+        <div class="feature right">
             <h4>Featured Companies</h4>
             <a href="https://www.visualcapitalist.com/company-spotlight/prospector-portal/">
                 <img src="./assets/Screenshot1.png" alt="Prospector logo featuring topographic maps.">
