fixed broken links :broken_heart:

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    
     <header class="header">
         <a href="#" class="logo"><img src="./assets/vertical-logo-dark-background.png"
                 alt="Visual Capitalist logo image of sylized binoculars" class="topLogo"></a>
@@ -153,32 +154,32 @@
         <div class="left">
             <ul class="topicsList">
                 <li class="topicsItem">
-                    <a href=""><i class="fas fa-chart-line"></i> Markets &rarr;</a>
+                    <a href="https://www.visualcapitalist.com/category/markets/"><i class="fas fa-chart-line"></i> Markets &rarr;</a>
                 </li>
                 <li class="topicsItem">
-                    <a href=""><i class="fas fa-memory"></i> Technology &rarr;</a>
+                    <a href="https://www.visualcapitalist.com/category/technology/"><i class="fas fa-memory"></i> Technology &rarr;</a>
                 </li>
                 <li class="topicsItem">
-                    <a href=""><i class="fas fa-money-bill-wave"></i> Money &rarr;</a>
+                    <a href="https://www.visualcapitalist.com/category/money-2/"><i class="fas fa-money-bill-wave"></i> Money &rarr;</a>
                 </li>
                 <li class="topicsItem">
-                    <a href=""> <i class="fas fa-laptop-medical"></i> Healthcare &rarr;</a>
+                    <a href="https://www.visualcapitalist.com/category/healthcare/"> <i class="fas fa-laptop-medical"></i> Healthcare &rarr;</a>
                 </li>
             </ul>
         </div>
         <div class="right">
             <ul class="topicsList">
                 <li class="topicsItem">
-                    <a href=""><i class="fas fa-power-off"></i></i> Energy &rarr;</a>
+                    <a href="https://www.visualcapitalist.com/category/energy/"><i class="fas fa-power-off"></i></i> Energy &rarr;</a>
                 </li>
                 <li class="topicsItem">
-                    <a href=""><i class="fas fa-hard-hat"></i> Mining &rarr;</a>
+                    <a href="https://www.visualcapitalist.com/category/mining/"><i class="fas fa-hard-hat"></i> Mining &rarr;</a>
                 </li>
                 <li class="topicsItem">
-                    <a href=""><i class="fas fa-solar-panel"></i> Green &rarr;</a>
+                    <a href="https://www.visualcapitalist.com/category/green-2/"><i class="fas fa-solar-panel"></i> Green &rarr;</a>
                 </li>
                 <li class="topicsItem">
-                    <a href=""><i class="far fa-handshake"></i> Politics &rarr;</a>
+                    <a href="https://www.visualcapitalist.com/category/politics/"><i class="far fa-handshake"></i> Politics &rarr;</a>
                 </li>
             </ul>
         </div>
@@ -316,6 +317,9 @@
             </div>
         </div>
     </section>
+    <div class="error">
+        <p>Best viewed on desktop 💻</p>
+    </div>
 </body>
 
 </html>
